[tool.poetry]
name = "consideration.py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
eth-brownie = "1.18.1"
web3 = "5.27.0"
pydantic = "^1.9.0"
merkletools = "^1.0.3"

[tool.poetry.dev-dependencies]
pyright = "1.1.235"
pylint = "2.13.4"
black = "22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
